--- a/2-Classification/docs/IA048-Atividade_Classificacao-Gabriel_Toffanetto/corpo.tex
+++ b/2-Classification/docs/IA048-Atividade_Classificacao-Gabriel_Toffanetto/corpo.tex
@@ -4,7 +4,7 @@
 
 O problema de classificação se da com o reconhecimento de atividades humanas utiliza como base de dados amostras tomadas do acelerômetro e do giroscópio de um \textit{smartphone} preso à cintura do candidato. Dessa forma, com base na leitura desses sensores, pode-se identificar se a pessoa está caminhando, subindo escadas, descendo escadas, sentada, de pé ou deitada, que representam as seis classes do problema.
 
-Os dados brutos utilizados são formados da concatenação das 128 medições dos sensores de orientação e aceleração, para os eixos $x$, $y$ e $z$, em cada janela de tempo. Dessa forma, chega-se a um \textit{dataset} de treinamento e teste com 768 atributos. São um total de 7352 amostras para treinamento e validação, e 2947 amostras para teste.
+Os dados brutos utilizados são formados da concatenação das 128 medições dos sensores de velocidade angular e aceleração, para os eixos $x$, $y$ e $z$, em cada janela de tempo. Dessa forma, chega-se a um \textit{dataset} de treinamento e teste com 768 atributos. São um total de 7352 amostras para treinamento e validação, e 2947 amostras para teste.
 
 Além dos dados brutos, é fornecido também dados pré-processados, com extração sobre os dados no tempo, na frequência, e também características estatísticas dos mesmos. Os dados tratados são formados por amostras de 561 atributos derivados de informações obtidas dos dados provenientes do acelerômetro e do giroscópio do \textit{smartphone}. 
 
@@ -539,7 +539,7 @@ Como foi visto nas matrizes de confusão, e nas tabelas de precisão e \textit{r
 
 %4) Dados brutos vs dados processados
 
-Ao realizar a classificação com dados pré-processados, as classes se tornam mais distintas por meio da extração de informações que não estão presentes diretamente nos dados, como componentes de frequência, componentes estatísticas e informações filtradas dos dados originais. Ao se basear nessas novas informações, se torna mais fácil diferenciar as atividades, principalmente ao se considerar atividades que se alteram por componentes de frequência e amplitude. Ao concatenar os dados dos sensores, se obtém um \textit{dataset} com 768 atributos, em frente aos 561 do conjunto de dados tratados. Porém, os dados tratados trazem inúmeras informações, enquanto os dados brutos fornecem apenas 6 sequências de leituras de aceleração e orientação.
+Ao realizar a classificação com dados pré-processados, as classes se tornam mais distintas por meio da extração de informações que não estão presentes diretamente nos dados, como componentes de frequência, componentes estatísticas e informações filtradas dos dados originais. Ao se basear nessas novas informações, se torna mais fácil diferenciar as atividades, principalmente ao se considerar atividades que se alteram por componentes de frequência e amplitude. Ao concatenar os dados dos sensores, se obtém um \textit{dataset} com 768 atributos, em frente aos 561 do conjunto de dados tratados. Porém, os dados tratados trazem inúmeras informações, enquanto os dados brutos fornecem apenas 6 sequências de leituras de aceleração e velocidade angular.
 
 A queda de desempenho ao treinar os mesmos classificadores com os dados brutos, das mesmas atividades, mostra que os modelos de aprendizado utilizados não possuem capacidade suficiente de extrair informações contidas dentro dos dados de entrada, devido a sua baixa complexidade e pouca ou nenhuma mudança de configuração dos dados. Os modelos baseados em \textit{deep learning}, por exemplo, apresentam profundidade suficiente para poderem receber dados de entrada com pouco ou nenhum pré-processamento, e a partir de inúmeras camadas não lineares, transformar o problema inicial em um novo problema a cada camada, onde cada uma delas se especializa em obter determinados padrões dos dados, fazendo com que a extração de informações internas aos dados sejam realizadas pelo modelo.
 
