--- a/3-Neural_Network/docs/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto.tex
+++ b/3-Neural_Network/docs/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto.tex
@@ -84,7 +84,7 @@
 %----------------------------------------------------
 
 %% Add bibliography %%
-%\bibliografia
+\bibliografia
 %\bibliografiaintext
 
 
