--- a/3-Neural_Network/docs/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto/references.bib
+++ b/3-Neural_Network/docs/IA048-Atividade_Redes_Neurais-Gabriel_Toffanetto/references.bib
@@ -1,7 +1,7 @@
-@misc{misc_human_activity_recognition_using_smartphones_240,
-  author       = {Reyes-Ortiz,Jorge, Anguita,Davide, Ghio,Alessandro, Oneto,Luca, and Parra,Xavier},
-  title        = {{Human Activity Recognition Using Smartphones}},
-  year         = {2012},
-  howpublished = {UCI Machine Learning Repository},
-  note         = {{DOI}: https://doi.org/10.24432/C54S4K}
+@book{geron2019hands,
+	title={Hands-On Machine Learning with Scikit-Learn, Keras, and TensorFlow: Concepts, Tools, and Techniques to Build Intelligent Systems},
+	author={G{\'e}ron, A.},
+	isbn={9781492032618},
+	year={2019},
+	publisher={O'Reilly Media}
 }
